# mathic

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md  TODO.md  build.rs  env.sh  extra.mlir  grammar.ebnf  grammar.txt  mathic_grammar.txt  module.mlir  program.mathir  somethis.mth
.cargo/: config.toml
.github/: codecov.yml
.github/actions/install-llvm-deps/: action.yml
.github/workflows/: ci.yml  publish.yml
.opencode/plans/: assignment_refactor.md  rvalue-fix.md
Dialects/: .gitignore  CMakeLists.txt  Makefile  extra.mlir  extracted.mlir
Dialects/include/Dialect/: CMakeLists.txt  capi.h
Dialects/include/Dialect/Symbolic/: CMakeLists.txt
Dialects/include/Dialect/Symbolic/Conversions/: CMakeLists.txt
Dialects/include/Dialect/Symbolic/Conversions/SymbolicToArith/: CMakeLists.txt  SymbolicToArith.h  SymbolicToArith.td
Dialects/include/Dialect/Symbolic/IR/: CMakeLists.txt  SymbolicDialect.h  SymbolicDialect.td  SymbolicOps.h  SymbolicOps.td  SymbolicTypes.h  SymbolicTypes.td
Dialects/include/Dialect/Symbolic/Transforms/: CMakeLists.txt  Passes.h  Passes.td  SymbolicCanonicalize.h  SymbolicExtractEval.h
Dialects/lib/Dialect/: CMakeLists.txt  capi.cpp
Dialects/lib/Dialect/Symbolic/Conversions/SymbolicToArith/: CMakeLists.txt  SymbolicToArith.cpp
Dialects/lib/Dialect/Symbolic/IR/: CMakeLists.txt  SymbolicDialect.cpp  SymbolicOps.cpp  SymbolicTypes.cpp
Dialects/lib/Dialect/Symbolic/Transforms/: CMakeLists.txt  SymbolicCanonicalize.cpp  SymbolicExtractEval.cpp
Dialects/tests/: CMakeLists.txt  lit.cfg.py
Dialects/tests/Dialect/Symbolic/Conversions/SymbolicToArith/: convert_add.mlir  convert_all_ops.mlir  convert_div.mlir  convert_mul.mlir  convert_sub.mlir  convert_sym.mlir  pipeline_two_exprs.mlir
Dialects/tests/Dialect/Symbolic/IR/: valid_ir.mlir
Dialects/tests/Dialect/Symbolic/Transforms/: extract_eval.mlir
Dialects/tools/: CMakeLists.txt  dialect-driver.cpp  test-runner.cpp
benches/: README.md  eval.rs
docs/: Dialects.md  README.md
docs/compilation_process/: backend.md  middleend.md
docs/compilation_process/dialects/: Symbolic.md
docs/dialects/: Symbolic.md  SymbolicPasses.md
examples/arithmetic/: mod.mth  order_of_operations.mth  shift_left.mth  shift_right.mth
examples/arrays/: array_init.mth
examples/control_flow/: for_sum.mth  if_else_false.mth  if_else_true.mth  if_true.mth  while_sum.mth
examples/functions/: factorial.mth  fibonacci.mth  forward_call.mth  simple_function.mth
examples/structs/: basic_declaration.mth  return_struct_init.mth
examples/symbolic/: basic_sym.mth  big_expr.mth  div.mth  mix.mth  mixed.mth  mul_add.mth  multi_eval.mth  nested.mth  var_expr.mth  with_loops.mth  with_vars.mth
examples/variables/: variable_increment.mth
programs/: add.mth  error.mth  error_invalid_statement.mth  error_missing_paren.mth  error_unexpected_end.mth  error_unexpected_token.mth  factorial.mth  fib.mth  for_loop.mth  hello_world.mth  max.mth  max_of_three.mth  return.mth  string.mth  struct_test.mth  sum_n.mth
programs/control_flow/: for_loop.mth  max.mth  max_of_three.mth  sum_n.mth
programs/errors/: error_undefined_variable.mth
programs/functions/: add.mth  factorial.mth  fibonacci.mth  nested.mth
programs/language_features/: blocks.mth  fib.mth  nested_functions.mth  variables.mth
programs/structs/: basic.mth
src/: codegen.rs  compiler.rs  diagnostics.rs  error.rs  error_reporter.rs  executor.rs  ffi.rs  lexer.rs  lib.rs  lowering.rs  parser.rs  test_utils.rs  token.rs  types.rs
src/codegen/: compiler_helper.rs  control_flow.rs  declaration.rs  dialect_integration.rs  error.rs  expression.rs  function_ctx.rs  lvalue.rs  rvalue.rs  statement.rs  symbol_table.rs  terminator.rs
src/codegen/compiler_helper/: debugging.rs
src/diagnostics/: codegen.rs  lowering.rs  parse.rs
src/error_reporter/: lowering.rs  parser.rs
src/ffi/: dialect_integration.rs
src/lexer/: error.rs  lexer.rs  token.rs
src/lowering/: ast_lowering.rs  control_flow.rs  declaration.rs  error.rs  expression.rs  ir.rs  ir_transformation.rs  passes.rs  statement.rs
src/lowering/ast_lowering/: control_flow.rs  declaration.rs  expression.rs  statement.rs
src/lowering/ir/: adts.rs  basic_block.rs  function.rs  instruction.rs  ir_walk.rs  symbols.rs  types.rs  value.rs
src/lowering/ir_transformation/: statement.rs
src/lowering/passes/: loop_dominance.rs  symbolic_loop_dominance.rs
src/parser/: ast.rs  error.rs  grammar.rs  lexer.rs  parser.rs  parsing.rs  reporter.rs  token.rs  types.rs
src/parser/ast/: control_flow.rs  declaration.rs  expression.rs  statement.rs
src/parser/grammar/: control_flow.rs  declaration.rs  expression.rs  statement.rs
src/parser/parsing/: control_flow.rs  declaration.rs  expression.rs  statement.rs
src/types/: numeric.rs
tests/: arithmetic.rs  common.rs  control_flow.rs  functions.rs  structs.rs  symbolic.rs  variables.rs
tests/programs/arithmetic/: addition.mth  division.mth  multiplication.mth  subtraction.mth
tests/programs/control_flow/: factorial.mth  for_sum.mth
tests/programs/functions/: forward_multiple_calls.mth  forward_mutual_recursion.mth  nested_calls.mth
tests/programs/structs/: field_assignment.mth  integrated_test.mth  local_struct.mth
tests/programs/variables/: basic_declaration.mth  multiple_variables.mth  reassignment.mth
