[package]
name = "mathic"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "euler"

[dependencies]
clap = { version = "4.5.24", features = ["derive"] }
llvm-sys = "211.0.0"
logos = "0.16.0"
logos-display = "0.1.3"
melior = { version = "0.26.3", features = ["helpers"]}
mlir-sys = "210.0.1"
rstest = "0.26.1"
thiserror = "2.0.10"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
