[package]
name = "mathic"
version = "0.1.0"
description = "A compiler with builtin support of symbolic operations, built with LLVM/MLIR"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/FrancoGiachetta/mathic"
keywords = ["compiler", "mlir", "llvm"]
categories = ["compilers"]
readme = "README.md"

[[bin]]
name = "euler"

[dependencies]
ariadne = "0.6.0"
clap = { version = "4.5.24", features = ["derive"] }
libc = "0.2.182"
llvm-sys = "211.0.0"
logos = "0.16.0"
logos-display = "0.1.3"
melior = { version = "0.26.3", features = ["helpers"]}
mlir-sys = "210.0.1"
rstest = "0.26.1"
thiserror = "2.0.10"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[package.metadata.cargo-machete]
ignored = ["libc"]
